--- a/TextTemplateApp/TextTemplateApp.csproj
+++ b/TextTemplateApp/TextTemplateApp.csproj
@@ -14,6 +14,7 @@
         <Description>This is a sample console application that demonstrates the use of the ClassPropertyParser, ModelWrapperBase, and TextTemplateProcessor class libraries.</Description>
         <PackageTags>c# text template sample application</PackageTags>
         <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+        <RepositoryUrl>https://github.com/Dave031387/TextTemplateApp/tree/master/TextTemplateApp</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
