--- a/TextTemplateProcessor/TextTemplateProcessor.csproj
+++ b/TextTemplateProcessor/TextTemplateProcessor.csproj
@@ -15,6 +15,7 @@
 		<PackageOutputPath>C:\Users\dave0\Packages</PackageOutputPath>
 		<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
 		<PackageTags>c# text template processor tokens tokenized generator</PackageTags>
+		<RepositoryUrl>https://github.com/Dave031387/TextTemplateApp/tree/master/TextTemplateProcessor</RepositoryUrl>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
